# API-Refresh

./: .gitignore  CI-CD-PLAN.md  GIT-CONNECT-GUIDE.md  README.md  app.py  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api_refresh_builder/: __init__.py  constants.py  crm_builder.py  mapping_builder.py  parsing.py  sql_builder.py  ui_helpers.py  validation.py
api_refresh_builder/pages/: api_refresh.py  crm_amendments.py  mapping.py
tests/: test_crm_builder.py  test_mapping_builder.py  test_parsing.py  test_sql_builder.py
