[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "api-refresh-sql-builder"
version = "1.0.0"
description = "Streamlit app that automates the API refresh SQL builder workflow."
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.32,<2",
    "pandas>=2.1,<3",
    "openpyxl>=3.1,<4",
    "xlrd>=2.0,<3",
    "pyperclip>=1.8,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9"]

[tool.pytest.ini_options]
testpaths = ["tests"]
